# osu-framework

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.gradle.kts  docker-compose.yaml  gradle.properties  justfile  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: BuildFatJar.yaml  BuildRs.yaml
buildSrc/: build.gradle.kts
docs/: .gitignore  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
docs/blog/: 2024-12-09-dev.mdx  2024-12-09-init.mdx  2024-12-11-dev.md  2024-12-13-dev.md  2024-12-18-dev.md  2024-12-20-dev.md  2024-12-21-dev.md  2024-12-25-dev.md  2025-01-05-dev.md  2025-01-15-dev.md  2025-01-17-dev.md  authors.yml
docs/docs/01-web/: 01-README.md  README.md
docs/docs/02-api/: 01-README.md  README.md  public.md
docs/docs/03-dev/: 01-README.md  02-config.md  03-run-dev.md  04-docker.md  05-start.md  (+2 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shell/: build-docs.sh  run-app.cmd  run-app.sh
spring-application/: build.gradle.kts
spring-core/: build.gradle.kts
spring-image/: build.gradle.kts
spring-osu-api/: READY.md  build.gradle.kts
spring-osu-beatmap-mirror/: build.gradle.kts
spring-osu-extended/: README.md  build.gradle.kts
spring-osu-extended/native/: Cargo.toml
spring-osu-extended/native/jni_macro/: Cargo.toml
spring-osu-extended/native/jni_macro/src/: lib.rs
spring-osu-extended/native/src/: java.rs  lib.rs  macro.rs  macros.rs
spring-osu-extended/native/src/java/: mod.rs  model.rs
spring-osu-extended/native/src/osu/: beatmap.rs  difficulty.rs  gradual.rs  mod.rs  mods.rs  performance.rs
spring-osu-persistence/: build.gradle.kts
spring-web/: build.gradle.kts
(+215 files in other folders)
