[package]
name = "spring-jni"
version = "0.0.1"
edition = "2021"


[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[workspace]
members = [
    "jni_macro"
]

[features]

[dependencies]
jni-macro = { version = "0.0.1", path = "jni_macro" }
jni = "0.21.1"
rosu-pp = "2.0.0"
rosu-mods = { version = "0.2.0", features = ["serde"] }
thiserror = "2.0.3"
serde = "1.0"
serde_json = "1.0"
mini-moka = "0.10.3"
bytes = "1.8.0"