[package]
name = "spring-jni"
version = "0.0.1"
edition = "2021"


[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[workspace]
members = [
    "jni_macro"
]

[features]

[dependencies]
jni-macro = { version = "0.0.1", path = "jni_macro" }
jni = "0.21.1"
rosu-pp = "3.0.0"
rosu-mods = { version = "0.3.0", features = ["serde"] }
thiserror = "2.0.12"
serde = "1.0"
serde_json = "1.0"
mini-moka = "0.10.3"
bytes = "1.10.1"
replace_with = "0.1.7"
